--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,6 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     implementation 'com.android.support:gridlayout-v7:26.1.0'
     implementation 'com.android.support:recyclerview-v7:26.1.0'
+    compile 'com.android.volley:volley:1.1.0'
+
 }
